# ChangeLog for media-video/vlc
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/vlc/ChangeLog,v 1.680 2011/02/16 21:39:35 aballier Exp $

  16 Feb 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild,
  metadata.xml:
  add an useflag for the snapshot vout plugin

  16 Feb 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild,
  metadata.xml:
  split ffmpeg in avcodec, avformat, postproc and swscale useflags as done
  upstream to allow a more finegrained control on what to install.

  16 Feb 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild,
  metadata.xml:
  Add fbosd and macosx specific useflags

  16 Feb 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild:
  readd some deps for skins useflag that were lost

  16 Feb 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild,
  metadata.xml:
  more win32 specific useflags

  16 Feb 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild,
  metadata.xml:
  add egl useflag

  16 Feb 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild,
  metadata.xml:
  add switcher useflag

  16 Feb 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild,
  metadata.xml:
  add dxva2 useflag

  16 Feb 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild,
  metadata.xml:
  add omxil useflag

  16 Feb 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild,
  metadata.xml:
  Allow to build without dvbpsi

  16 Feb 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild,
  metadata.xml:
  Add bluray useflag

  16 Feb 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild,
  metadata.xml:
  Add dshow and bda useflags (win32 only)

  16 Feb 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild,
  metadata.xml:
  Add linsys useflag

  16 Feb 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild,
  metadata.xml:
  Add growl useflag for growl notification support (over UDP for remote access