@@ -7,13 +7,13 @@ DIST vlc-patches-89.tar.bz2 3370 RMD160 da3c173817f6666abfaaef5762af58f3810e5180
 DIST vlc-patches-91.tar.bz2 3955 RMD160 37024ac3d68f0c36f711bb680c573976e4e729e8 SHA1 987ac5f47926d76073e84643023df346f9a0027a SHA256 9863e9fd62bf07641e3e99cbd11194cd462ad99ca1719034badfff74419ec451
 EBUILD vlc-1.1.7.ebuild 12269 RMD160 36dc682bb0549b58f7803aa17a055ef0b971ca53 SHA1 1e561a2088c4c4ed3935d24b2a63f02e495a84fb SHA256 261f17b1624e51706b95cf97e5c342b1012147d9027bb1e485aecef29bdcd7e8
 EBUILD vlc-1.1.9999.ebuild 12280 RMD160 e7e42fd81239d7151280219c89c88350505e5d5f SHA1 b13979bc3cff3478efe29e8181de1e1b13a84107 SHA256 8a31788ba75dcb01a467c315b11110a2e0d2ed3f823233d87e6572d296da6843
-EBUILD vlc-9999.ebuild 10921 RMD160 e852bee7628ff2e1b21d608108cbe029171906ee SHA1 b658190820b9c99c14585bf22b7953aa7345bfad SHA256 c6fa8ac6084ce2e0d1711869eeaab13505715d60ef3f4a6d18d4933c5d45b0a4
-MISC ChangeLog 102919 RMD160 a72462e2592f90a26be639ad63aec9b4c6b6c132 SHA1 34a7c183835bfcdd7c0f3bdf704cc8eac1469304 SHA256 9dd61f40c244d206c51b365e363d562f8eb4d33c71820f1a49ee00c193b6be0a
+EBUILD vlc-9999.ebuild 10982 RMD160 7b07db360479c79952baa27a68773ebf45ab280e SHA1 24e24471a9130628c548c20cee76f169ff169033 SHA256 31902939caf02c38bcabb34302cf1e9188b5b055a666067003ee0f6bab162c80
+MISC ChangeLog 103013 RMD160 e0dd87fc10fdf4f774dbca9d69b661fe8d844f53 SHA1 20191f3e0702458f087a25dcad0cecf55de79b8b SHA256 5c9cc9b577c1b0cc426722c236af66cf7b9a09c62a5f0871c83a93b3ab4353a9
 MISC metadata.xml 6486 RMD160 44cc6fbd28c3761be9c40643ba330ee8d4324dff SHA1 7acf193f5fca6f4bb9c9a8ad19864999312619f3 SHA256 16d6dd0ce75b433dbd4f9a9b7ff03f6215ae6edeec976b828a682491bb224a44
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk1cRB8ACgkQvFcC4BYPU0p+RQCfdcJddW7PJYr+vc7uWRt4E7vM
-NwkAn0clJ2e3WK+xyP0rILQOFFYsk0d7
-=gun8
+iEYEARECAAYFAk1cStgACgkQvFcC4BYPU0oXSwCgwauGqnSrF/VpkMOIifk8IRSw
+xPAAoLfvbemLFFnUnZDcG3d9Rd/BW0TX
+=Aqjc
 -----END PGP SIGNATURE-----
